2007-06-07  Arno Rehn  <arno@arnorehn.de>

	* Added README
	* Updated AUTHORS and TODO

2007-06-05  Arno Rehn  <arno@arnorehn.de>

	* Improved the build system:
		* Added FindMono.cmake to find mono, gmcs, mcs and gacutil
		* Added CSharpMacros.cmake which consists of macros for dealing with C#.
		  It's now much easier to build C# libraries and executables and to
		  install them.
		  Further, a C# target is only built if the output file is missing
		  or the sources were modified.
	* Updated all CMakeLists.txt to work with the improved build system.

2007-06-04  Richard Dale  <rdale@foton.es>

	* Added the QBitArray class for completeness

2007-06-03  Richard Dale  <rdale@foton.es>

	* Fixed implicit type conversions code for non-QtCore classes to QVariants

2007-06-02  Richard Dale  <rdale@foton.es>

	* Updated the uics tool against the Qt 4.3 sources
	* Changed the code generation to generate properties for QDOC_PROPERTY
	  macros
	* Added a space after the '///'s for the documentation tags so that they
	  have Kate syntax highlighting
	* Added a string to QKeySequence implicit type conversion

2007-06-02  Arno Rehn  <arno@arnorehn.de>

	* Special cased the QCoreApplication constructor, too.
	* Added AssemblyInfo.cs
	* Added a keyfile for strong naming the qt-dotnet assembly so it can
	  be added to the GAC. It won't be generated at compile time since there
	  might occur problems when it is regenerated and the assembly is reinstalled.
	* Added rules in CMakeLists.txt for installing libqyoto.so.
	* Added rules in CMakeLists.txt for installing qt-dotnet.dll into the GAC.

2007-06-01  Arno Rehn  <arno@arnorehn.de>

	* Special cased the QApplication constructor call to work correctly

2007-05-31  Arno Rehn  <arno@arnorehn.de>

	* Added a hack in uics for QFrame.Shape and QFrame.Shadow

2007-05-31  Richard Dale  <rdale@foton.es>

	* Regenerated the Qyoto sources from the release version of Qt 4.3

2007-05-29  Richard Dale  <rdale@foton.es>
